syntax = "proto3";

package auth_v1;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option go_package = "github.com/titoffon/auth/pkg/auth_v1;auth_v1"; //указывает то, какой пакет будет у сгенерированных файлов, pkg служит папкой для хранения кода, который мы хотим использовать в других проектах


// Описание ролей пользователя
enum Role {
    USER = 0;
    ADMIN = 1;
}

//Создаём сам API
// Сервис для управления пользователями
service UserService {
    // Создание пользователя
    rpc Create (CreateUserRequest) returns (CreateUserResponse);
    // rpc -подразумевается, что мы работаем с удаленным вызоыом процедур
    // Получение информации о пользователе
    rpc Get (GetUserRequest) returns (GetUserResponse);
    
    // Обновление информации о пользователе
    rpc Update (UpdateUserRequest) returns (google.protobuf.Empty);
    
    // Удаление пользователя
    rpc Delete (DeleteUserRequest) returns (google.protobuf.Empty);
    // google.protobuf.Empty служит для возврата пустой структуры
}

// Запрос для создания пользователя
message CreateUserRequest {
    // поля нумеруются для сериализации и десериализации, 
    //т.к. названия полей не передаются по сети
    string name = 1;  
    string email = 2;
    string password = 3;
    string password_confirm = 4;
    Role role = 5;
}

// Ответ при создании пользователя
message CreateUserResponse {
    int64 id = 1;
}

// Запрос для получения информации о пользователе
message GetUserRequest {
    int64 id = 1;
}

// Ответ с информацией о пользователе
message GetUserResponse {
    int64 id = 1;
    string name = 2;
    string email = 3;
    Role role = 4;
    // google.protobuf.Timestamp - тип данных от google для передачи отметки времени
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp updated_at = 6;
}

// Запрос для обновления информации о пользователе
message UpdateUserRequest {
    int64 id = 1;
    //google.protobuf.StringValue - тип данных для стркои,
    //представляет из себя nullable объект,
    //тоесть есть разница между nil и нулем этого объекта,
    //для того чтобы разделить хотели поле не обновлять или занулить
    google.protobuf.StringValue name = 2;
    google.protobuf.StringValue email = 3;
    Role role = 4;
}

// Запрос для удаления пользователя
message DeleteUserRequest {
    int64 id = 1;
}